<resources>

    <string name="app_name">MovingTool</string>
    <string name="submit">New Item</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="value">Est. Value</string>
    <string name="keep">Keep</string>
    <string name="sell">Sell</string>
    <string name="store">Store somewhere</string>
    <string name="ownership">Ownership</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Moving Tool</string>
    <string name="nav_header_subtitle">marinus.burger@protonmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Items</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_edit_item">Edit Item</string>
    <string name="menu_new_item">New Item</string>
</resources>
